--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.secbro</groupId>
-	<artifactId>spring-boot-drools-db</artifactId>
+	<artifactId>spring-test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -16,7 +16,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.7</java.version>
 		<spring.version>1.5.4.RELEASE</spring.version>
-		<drools.version>6.5.0.Final</drools.version>
+		<drools.version>7.0.0.Final</drools.version>
 	</properties>
 
 	<dependencyManagement>
@@ -80,7 +80,12 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.3.2</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.16</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
